--- a/style.css
+++ b/style.css
@@ -1,15 +1,202 @@
+:root {
+  --primary: #151515;
+  --secondary: #444444;
+  --white: #fff;
+  --custom: #d5966c;
+}
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0 auto;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+img {
+  width: 100%;
+}
+
+.hero-logo {
+  width: 280px;
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 
 h1 {
   font-family: "Big Shoulders Display", cursive;
+  font-size: 50px;
+  line-height: 45px;
+  text-transform: uppercase;
+  margin-bottom: 21px;
 }
 
 p {
   font-family: "Outfit", sans-serif;
+  font-size: 18px;
+  line-height: 28px;
+  margin-top: 0;
+}
+
+.hero-content {
+  color: var(--secondary);
+}
+
+.btn {
+  background-color: var(--primary);
+  width: 260px;
+  height: 72px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.btn a {
+  color: var(--white);
+  text-decoration: none;
+  font-family: "Big Shoulders Display", cursive;
+  text-transform: uppercase;
+  letter-spacing: 3.64px;
+  padding-right: 50px;
+  font-size: 20px;
+}
+
+svg {
+  background-color: var(--custom);
+  width: 56px;
+  height: 72px;
+  position: absolute;
+  right: 0;
+  padding-top: 25px;
+  padding-left: 25px;
+}
+
+.container {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+header {
+  margin-bottom: 120px;
+}
+
+.box {
+  margin-bottom: 16px;
+}
+
+.box-2 h1 {
+  padding-right: 45px;
+  color: var(--primary);
+}
+.box-2 p {
+  padding-right: 30px;
+  color: var(--secondary);
+  margin-bottom: 32px;
+}
+
+.box-5 {
+  color: var(--white);
+  background-color: var(--primary);
+  width: 343px;
+  height: 293px;
+  padding-top: 48px;
+  padding-left: 24px;
+  margin-bottom: 120px;
+}
+
+.box-5 h1 {
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+
+footer {
+  width: 100%;
+  background-color: var(--primary);
+  color: var(--white);
+}
+
+.footer-container {
+  padding: 48px 32px;
+}
+
+.footer-logo {
+  width: 110px;
+  margin-bottom: 32px;
+}
+
+.social-container img {
+  width: 20px;
+  margin-right: 20px;
+  margin-top: 38px;
+}
+
+@media (min-width: 768px) {
+  /* header {
+    width: 100%;
+  }
+
+  img {
+    width: 437px;
+  }
+
+  .hero {
+    display: flex;
+    position: relative;
+  }
+
+  .hero-container {
+    position: absolute;
+    top: 145px;
+    left: 389px;
+    width: 339px;
+  }
+
+  .hero-content,
+  .hero-logo {
+    margin-bottom: 48px;
+  } */
+}
+
+@media (min-width: 1000px) {
+  /* img {
+    width: 540px;
+  }
+
+  .hero-container {
+    position: absolute;
+    top: 190px;
+    left: 110px;
+    display: flex;
+    justify-content: space-between;
+    width: 1180px;
+  }
+
+  .hero-img-container {
+    position: relative;
+    background-color: var(--primary);
+    width: 990px;
+    display: flex;
+    justify-content: end;
+  }
+
+  .hero-logo {
+    width: 514px;
+  }
+
+  .hero-content {
+    width: 350px;
+    font-size: 22px;
+    line-height: 32px;
+  }
+
+  main {
+  } */
 }
