--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ footer {
   width: 100%;
   background-color: var(--primary);
   color: var(--white);
+  padding-bottom: 40px;
 }
 
 .footer-container {
@@ -136,6 +137,17 @@ footer {
   width: 20px;
   margin-right: 20px;
   margin-top: 38px;
+}
+
+.attribution {
+  text-align: center;
+}
+
+.attribution a {
+  text-decoration: none;
+  color: var(--custom);
+  font-family: "Big Shoulders Display", cursive;
+  letter-spacing: 1px;
 }
 
 @media (min-width: 768px) {
