--- a/style.css
+++ b/style.css
@@ -105,10 +105,9 @@ header {
 .box-5 {
   color: var(--white);
   background-color: var(--primary);
-  width: 343px;
+  /* width: 343px; */
   height: 293px;
-  padding-top: 48px;
-  padding-left: 24px;
+  padding: 48px 24px 0;
   margin-bottom: 120px;
 }
 
@@ -121,11 +120,11 @@ footer {
   width: 100%;
   background-color: var(--primary);
   color: var(--white);
-  padding-bottom: 40px;
+  padding-bottom: 30px;
 }
 
 .footer-container {
-  padding: 48px 32px;
+  padding: 48px 32px 40px;
 }
 
 .footer-logo {
@@ -151,30 +150,106 @@ footer {
 }
 
 @media (min-width: 768px) {
-  /* header {
+  header {
+    display: flex;
     width: 100%;
   }
 
-  img {
-    width: 437px;
-  }
-
   .hero {
-    display: flex;
     position: relative;
   }
 
-  .hero-container {
-    position: absolute;
-    top: 145px;
-    left: 389px;
-    width: 339px;
+  .hero-img-container img {
+    width: 437px;
   }
 
-  .hero-content,
+  .hero-container {
+    width: 375px;
+    position: absolute;
+    top: 115px;
+    left: 375px;
+  }
+
   .hero-logo {
+    width: 339px;
     margin-bottom: 48px;
-  } */
+  }
+
+  .hero-content {
+    margin-bottom: 48px;
+  }
+
+  .main-container {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+    gap: 11px;
+    margin-bottom: 120px;
+  }
+
+  .box {
+    margin: 0;
+  }
+
+  .box-1 {
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+  }
+
+  .box-1 img,
+  .box-3 img {
+    width: 398px;
+  }
+  .box-2 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 1;
+    width: 280px;
+    height: 400px;
+    margin-bottom: 0;
+    padding-right: 20px;
+  }
+  .box-3 {
+    grid-column: 1 / 3;
+    grid-row: 2 / 4;
+  }
+  .box-4 {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+  }
+
+  .box-4 {
+    width: 280px;
+    height: 313px;
+  }
+  .box-5 {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+    width: 280px;
+    height: 392px;
+    padding: 85px 29px;
+  }
+
+  .footer-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: start;
+    padding-top: 56px;
+  }
+
+  .footer-container p {
+    width: 320px;
+  }
+
+  .footer-logo {
+    width: 110px;
+    height: 40px;
+    margin-right: 65px;
+  }
+
+  .social-container img {
+    margin-top: 0;
+  }
 }
 
 @media (min-width: 1000px) {
