--- a/index.css
+++ b/index.css
@@ -74,6 +74,7 @@ svg {
   width: 56px;
   height: 72px;
   position: absolute;
+  top: 0;
   right: 0;
   padding-top: 25px;
   padding-left: 25px;
@@ -152,11 +153,12 @@ footer {
 @media (min-width: 768px) {
   header {
     display: flex;
-    width: 100%;
+    width: 768px;
   }
 
   .hero {
     position: relative;
+    margin-right: 0;
   }
 
   .hero-img-container img {
@@ -226,15 +228,17 @@ footer {
     grid-row: 3 / 4;
     width: 280px;
     height: 392px;
+
     padding: 85px 29px;
   }
 
   .footer-container {
     display: flex;
-    width: 100%;
+    width: 768px;
     justify-content: space-between;
     align-items: start;
     padding-top: 56px;
+    margin: 0 auto;
   }
 
   .footer-container p {
@@ -252,38 +256,103 @@ footer {
   }
 }
 
-@media (min-width: 1000px) {
-  /* img {
+@media (min-width: 1440px) {
+  header {
+    width: 1440px;
+  }
+  .hero {
+    display: flex;
+    width: 1440px;
+    justify-content: center;
+    margin: 0 auto;
+    position: relative;
+  }
+  .hero-container {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 189px;
+    left: 130px;
+    width: 1110px;
+  }
+
+  .hero-img-container img {
     width: 540px;
   }
 
-  .hero-container {
+  .hero::before {
+    content: "";
+    height: 800px;
+    width: 2000px;
     position: absolute;
-    top: 190px;
-    left: 110px;
-    display: flex;
-    justify-content: space-between;
-    width: 1180px;
+    right: 68.72%;
+    background-color: rgba(21, 21, 21, 0.5);
   }
 
-  .hero-img-container {
-    position: relative;
-    background-color: var(--primary);
-    width: 990px;
-    display: flex;
-    justify-content: end;
+  .hero-content p {
+    width: 350px;
+    margin-bottom: 64px;
+    font-size: 22px;
   }
 
   .hero-logo {
     width: 514px;
+    height: 176px;
+    margin-top: 0;
+    margin-right: 300px;
   }
 
-  .hero-content {
-    width: 350px;
+  .main-container {
+    gap: 30px;
+  }
+
+  .box-1 img {
+    width: 635px;
+  }
+
+  .box-2 {
+    padding-top: 20px;
+    padding-right: 90px;
+  }
+
+  .box-2 h1,
+  .box-5 h1 {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .box-2 p,
+  .box-5 p {
     font-size: 22px;
-    line-height: 32px;
   }
 
-  main {
-  } */
+  .box-2,
+  .box-5 {
+    width: 445px;
+    height: 377px;
+  }
+  .box-3 img {
+    width: 635px;
+  }
+  .box-4 img {
+    width: 445px;
+  }
+  .box-5 {
+    padding: 65px 48px;
+  }
+
+  .footer-container {
+    width: 1110px;
+    margin: 0 auto;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .footer-logo {
+    width: 160px;
+    height: 58px;
+  }
+  .footer-container p {
+    width: 430px;
+  }
 }
