--- a/index.css
+++ b/index.css
@@ -19,6 +19,10 @@ body {
   flex-direction: column;
 }
 
+header {
+  margin-bottom: 120px;
+}
+
 img {
   width: 100%;
 }
@@ -90,10 +94,6 @@ svg {
   padding-right: 16px;
 }
 
-header {
-  margin-bottom: 120px;
-}
-
 .box {
   margin-bottom: 16px;
 }
@@ -111,7 +111,6 @@ header {
 .box-5 {
   color: var(--white);
   background-color: var(--primary);
-  /* width: 343px; */
   height: 293px;
   padding: 48px 24px 0;
   margin-bottom: 120px;
@@ -296,7 +295,8 @@ footer {
     width: 2000px;
     position: absolute;
     right: 68.72%;
-    background-color: rgba(21, 21, 21, 0.5);
+    /* background-color: rgba(21, 21, 21, 0.5); */
+    background-color: var(--custom);
   }
 
   .hero-content p {
